# snake

./: CMakeLists.txt
headers/: header.h  xlib_headers.h
source/: main.cpp
